# server-config

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ansible-ci.yml
ansible/: inventory.ini  server.yml
ansible/molecule/default/: converge.yml  molecule.yml  verify.yml
ansible/molecule/playbook/: converge.yml  molecule.yml  verify.yml
ansible/roles/base/handlers/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/dev/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/networking/handlers/: main.yml
ansible/roles/networking/tasks/: main.yml
bootstrap/: bootstrap.sh
configs/caddy/: Caddyfile
configs/system/: sysctl.conf
docker/: .env.example  compose.yml
scripts/: backup.sh  restore.sh
